# ChangeLog for dev-python/argh
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Nov 2011; James Rowe <jnrowe@gmail.com> -argh-0.14.1.ebuild,
  argh-0.14.2.ebuild:
  Keyworded x86.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> argh-0.14.2.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*argh-0.14.2 (19 Oct 2011)

  19 Oct 2011; James Rowe <jnrowe@gmail.com> +argh-0.14.2.ebuild:
  Version bump [470].

  06 Oct 2011; James Rowe <jnrowe@gmail.com> -argh-0.14.0.ebuild,
  argh-0.14.1.ebuild:
  Keyworded x86.

  06 Oct 2011; James Rowe <jnrowe@gmail.com> argh-0.14.1.ebuild:
  Keyworded amd64.

*argh-0.14.1 (06 Sep 2011)

  06 Sep 2011; James Rowe <jnrowe@gmail.com> +argh-0.14.1.ebuild:
  Version bump [463].

  20 Apr 2011; James Rowe <jnrowe@gmail.com> argh-0.14.0.ebuild:
  Keyworded x86.

  08 Apr 2011; James Rowe <jnrowe@gmail.com> argh-0.14.0.ebuild:
  Keyworded amd64.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> argh-0.14.0.ebuild:
  Keyworded ~x86.

*argh-0.14.0 (09 Mar 2011)

  09 Mar 2011; James Rowe <jnrowe@gmail.com> +argh-0.14.0.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [305].
