@@ -2,10 +2,11 @@
 Hash: SHA512
 
 DIST argh-0.14.2.tar.gz 11333 RMD160 88ced5cf77146acd35a8cd464661d0a437a47fd0 SHA1 178dea29c681645e71b0328aadb8a64358166d1b SHA256 d103847e93693de6f76c4bb5741e20ac9639adc6565ff97078e658e17b598440
+DIST argh-0.15.0.tar.gz 14802 RMD160 e6f3a73b24e58a4d7595f61ef936fb15131046b5 SHA1 1d44e11087683258cbda1ed71d456a5261882462 SHA256 d51abf9034ff5c7d9b76603fa06ac098c009520e9b9fa8d57bb45fc159b4723e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7GRNMACgkQzJrj3cAXR0lVhgCdHe63FYW+/UQe5H4Na074v6vZ
-6R0AnjDjMb1D6AuLbM6E9gKx1ePUggQy
-=xcjr
+iEYEAREKAAYFAk9JDfQACgkQzJrj3cAXR0nUtACfeNvE5CaQJMrCl/3oovu4RjTf
+7UQAnRok9rn4J/yTdSWDJdZEFmxEWxoa
+=VgvL
 -----END PGP SIGNATURE-----
