@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install postinst postrm prepare
+DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-2.7* =dev-lang/python-2.6* )
+DESCRIPTION=A simple argparse wrapper for an easier life
+EAPI=3
+HOMEPAGE=http://pypi.python.org/pypi/argh/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=|| ( dev-python/argparse >=dev-lang/python-2.7 ) dev-python/six >=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-2.7* =dev-lang/python-2.6* )
+SLOT=0
+SRC_URI=mirror://pypi/a/argh/argh-0.15.0.tar.gz
+_eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	bd31a910fcf7757bdb34af6ea39f8ae0	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	536c5e70c5fb252ed3b769e04aa3f05b	python	ba318f39f69a4478c5097f9ccf8c1173	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=2745f5489ef667803596e2dacfd13585
