@@ -55,6 +55,8 @@ REM 2012-03-29 *1 MSG %"Stabilise amd64 dev-python/termtool-1.0%" %a
 REM 2012-03-29 *1 MSG %"Stabilise x86 dev-python/termtool-1.0%" %a
 REM 2012-03-26 *1 MSG %"Stabilise amd64 dev-python/six-1.1.0%" %a
 REM 2012-03-26 *1 MSG %"Stabilise x86 dev-python/six-1.1.0%" %a
+REM 2012-03-26 *1 MSG %"Stabilise amd64 dev-python/argh-0.15.0%" %a
+REM 2012-03-26 *1 MSG %"Stabilise x86 dev-python/argh-0.15.0%" %a
 
 REM 2012-04-04 *1 MSG %"Stabilise amd64 dev-python/rstctl-0.4%" %a
 REM 2012-04-06 *1 MSG %"Stabilise amd64 app-misc/hubugs-0.11.0%" %a
